Fixes 32946: Replace entity repository inheritance with composition
Compose Java 21 entity policies and shared read, mutation, history, bulk,
deletion and cache services, and migrate REST, MCP and background consumers.
Preserve owning transaction boundaries, retry replay and Redis publication
while batching metadata lookups and reusing canonical serialized rows.

Add regression suites, API benchmark protocols and architecture, extension
migration and performance documentation. Keep the unresolved latency and
changed-class coverage acceptance gates explicit.